public class Edge {
    public String name;
    public Integer u;
    public Integer v;
    public Double weight;

    public Edge(String name, Integer u, Integer v, Double weight) {
        this.name = name;
        this.u = u;
        this.v = v;
        this.weight = weight;
    }
}